[gd_scene load_steps=10 format=3 uid="uid://c031ev20utqij"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_gkrm3"]
[ext_resource type="PackedScene" uid="uid://dybusjv0ogm3m" path="res://scenes/grid.tscn" id="2_4148p"]
[ext_resource type="Texture2D" uid="uid://bi1oxyrrje7o3" path="res://assets/hero/Warrior_Purple.png" id="3_o4osn"]
[ext_resource type="PackedScene" uid="uid://bqbyk0rpxuy00" path="res://scenes/hp_bar.tscn" id="4_dhgih"]
[ext_resource type="PackedScene" uid="uid://dmvucbbpwf0oe" path="res://scenes/fire_bar.tscn" id="5_ylu0f"]

[sub_resource type="Animation" id="Animation_ougky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kqysf"]
resource_name = "attack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_udpfc"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ncr3d"]
_data = {
"RESET": SubResource("Animation_ougky"),
"attack": SubResource("Animation_kqysf"),
"idle": SubResource("Animation_udpfc")
}

[node name="Player" type="Node2D"]
texture_filter = 1
script = ExtResource("1_gkrm3")

[node name="Grid" parent="." instance=ExtResource("2_4148p")]

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_o4osn")
centered = false
hframes = 6
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_ncr3d")
}

[node name="HpBar" parent="Sprite" instance=ExtResource("4_dhgih")]
offset_left = 54.0
offset_top = 28.0
offset_right = 138.0
offset_bottom = 44.0

[node name="FireBar" parent="Sprite" instance=ExtResource("5_ylu0f")]
offset_left = 54.0
offset_top = 140.0
offset_right = 138.0
offset_bottom = 156.0

[node name="WeaponTimer" type="Timer" parent="."]

[node name="MoveHurtboxTimer" type="Timer" parent="."]

[connection signal="timeout" from="WeaponTimer" to="." method="_on_weapon_timer_timeout"]
[connection signal="timeout" from="MoveHurtboxTimer" to="." method="_on_move_hurtbox_timer_timeout"]
